[ADD] Listar filmes com array de objetos analises

--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,8 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<finalName>${artifactId}</finalName>
 	</build>
+	<packaging>war</packaging>
 
 </project>
