--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,12 @@ spring.datasource.username=root
 spring.datasource.password=ismael
 # url de conexão do banco de dados
 spring.datasource.url=jdbc:mysql://localhost:3306/movies_teste
-
+api.security.token.secret=${JWT_SECRET:my-secret-key}
 # apontamos para o JPA e Hibernate qual é o Dialeto do banco de dados
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 # deixamos o hibernate responsável por ler nossas entidades e criar as tabelas do nosso banco de dados automaticamente
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 # configuração do Hibernate para reconhecer o nome de tabelas em caixa alta
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 # configurações de log
