[ADD] MVP de upload e reprodução de videos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
+#spring.servlet.multipart.max-file-size=1024MB
+#spring.servlet.multipart.max-request-size=1024MB
