--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,25 @@
-# usuário e senha de conexão com o banco de dados
 spring.datasource.username=root
 spring.datasource.password=ismael
-# url de conexão do banco de dados
 spring.datasource.url=jdbc:mysql://localhost:3306/movies_teste
-api.security.token.secret=${JWT_SECRET:my-secret-key}
-# apontamos para o JPA e Hibernate qual é o Dialeto do banco de dados
+api.security.token.secret=${JWT_SECRET}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-# deixamos o hibernate responsável por ler nossas entidades e criar as tabelas do nosso banco de dados automaticamente
 spring.jpa.hibernate.ddl-auto=update
-# configuração do Hibernate para reconhecer o nome de tabelas em caixa alta
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-# configurações de log
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.use_sql_comments=true
-#spring.servlet.multipart.max-file-size=1024MB
-#spring.servlet.multipart.max-request-size=1024MB
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.use_sql_comments=true
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=6048MB
+spring.servlet.multipart.max-request-size=6048MB
+#server.port=6000
+
+logging.level.root=ERROR
+logging.level.com.ismael.movies=ERROR
+
+logging.level.org.hibernate.SQL=ERROR
+logging.level.org.springframework.web=ERROR
+spring.resources.static-locations=file:videos/hls/
+
