Added video upload endpoint

--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,9 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-logging</artifactId>
 		</dependency>
+		<!-- Dependência Maven para JavaCV -->
+
+
 
 	</dependencies>
 
