--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,11 +15,12 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=6048MB
 spring.servlet.multipart.max-request-size=6048MB
 #server.port=6000
+server.tomcat.max-swallow-size=-1
 
-logging.level.root=DEBUG
-logging.level.com.ismael.movies=DEBUG
+logging.level.root=ERROR
+logging.level.com.ismael.movies=ERROR
 
 logging.level.org.hibernate.SQL=ERROR
-logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web=ERROR
 spring.resources.static-locations=file:videos/hls/
 
