--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/movies_teste
 api.security.token.secret=${JWT_SECRET}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 #spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -23,4 +23,13 @@ logging.level.com.ismael.movies=ERROR
 logging.level.org.hibernate.SQL=ERROR
 logging.level.org.springframework.web=ERROR
 spring.resources.static-locations=file:videos/hls/
+
+server.url=https://localhost:443
+
+
+server.port=443
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=classpath:barao.pfx
+server.ssl.key-store-password=
+#server.ssl.key-alias=teste
 
