Added new templates to list the movies

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,6 +30,6 @@ server.url=https://localhost:443
 server.port=443
 server.ssl.key-store-type=PKCS12
 server.ssl.key-store=classpath:barao.pfx
-server.ssl.key-store-password=
+server.ssl.key-store-password=alg160325
 #server.ssl.key-alias=teste
 
