--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/movies_teste
 api.security.token.secret=${JWT_SECRET}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 #spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -18,7 +18,7 @@ spring.servlet.multipart.max-request-size=6048MB
 server.tomcat.max-swallow-size=-1
 
 logging.level.root=ERROR
-logging.level.com.ismael.movies=ERROR
+logging.level.com.ismael.movie=ERROR
 
 logging.level.org.hibernate.SQL=ERROR
 logging.level.org.springframework.web=ERROR
