Fixed null values on the enpoints that save values

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,15 @@
 		</dependency>
 		<!-- Dependência Maven para JavaCV -->
 
+		<!--Prometheus dependencies-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+		</dependency>
 
 
 	</dependencies>
