[FIX] added the server-url as a config so we just need to change it on the application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,7 @@ logging.level.org.hibernate.SQL=ERROR
 logging.level.org.springframework.web=ERROR
 spring.resources.static-locations=file:videos/hls/
 
-server.url=http://localhost:443
+server.url=http://ismael221.ddns.net:443
 
 
 server.port=443
