[ADD] Smtp Server inital config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,4 +36,8 @@ server.port=443
 management.endpoints.web.exposure.include=prometheus
 management.endpoint.prometheus.enabled=true
 
-
+spring.mail.host=${SERVER_SMTP}
+spring.mail.port=${SMTP_PORT}
+spring.mail.username=${SMTP_USERNAME}
+spring.mail.password=${SMTP_PASSWORD}
+spring.mail.properties.mail.smtp.starttls.enable=true
