--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,10 @@
 			<version>3.2.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
