[FIX] Creating the folders relative to the app instead of using the users folder path

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,11 +33,12 @@ server.port=443
 #server.ssl.key-store-password=alg160325
 #server.ssl.key-alias=teste
 
-management.endpoints.web.exposure.include=prometheus
+management.endpoints.web.exposure.include=*
 management.endpoint.prometheus.enabled=true
 
-spring.mail.host=${SERVER_SMTP}
-spring.mail.port=${SMTP_PORT}
-spring.mail.username=${SMTP_USERNAME}
-spring.mail.password=${SMTP_PASSWORD}
+spring.mail.host=smtp.hostinger.com
+spring.mail.port=587
+spring.mail.username=ismael@enrotech.com.br
+spring.mail.password=Ub3rl@nd1@
 spring.mail.properties.mail.smtp.starttls.enable=true
+
