--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,7 +33,7 @@ server.port=443
 #server.ssl.key-store-password=alg160325
 #server.ssl.key-alias=teste
 
-management.endpoints.web.exposure.include=prometheus
+management.endpoints.web.exposure.include=*
 management.endpoint.prometheus.enabled=true
 
 spring.mail.host=${SERVER_SMTP}
@@ -41,3 +41,4 @@ spring.mail.port=${SMTP_PORT}
 spring.mail.username=${SMTP_USERNAME}
 spring.mail.password=${SMTP_PASSWORD}
 spring.mail.properties.mail.smtp.starttls.enable=true
+
