[ADD] Cache config on all services

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,9 +36,13 @@ server.port=443
 management.endpoints.web.exposure.include=*
 management.endpoint.prometheus.enabled=true
 
-spring.mail.host=${SERVER_SMTP}
-spring.mail.port=${SMTP_PORT}
-spring.mail.username=${SMTP_USERNAME}
-spring.mail.password=${SMTP_PASSWORD}
-spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.host=
+spring.mail.port=
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.starttls.enable=
 
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.cache.redis.time-to-live=60000
