[fix] Broken carrousel on PC format

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.username=root
 spring.datasource.password=ismael
-spring.datasource.url=jdbc:mysql://localhost:3306/movies_teste
+spring.datasource.url=jdbc:mysql://localhost:3306/movies_dev
 api.security.token.secret=${JWT_SECRET}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
@@ -24,10 +24,10 @@ logging.level.org.hibernate.SQL=ERROR
 logging.level.org.springframework.web=ERROR
 spring.resources.static-locations=file:videos/hls/
 
-server.url=http://ismael221.ddns.net:443
+server.url=http://localhost:8080
 
 
-server.port=443
+server.port=8080
 #server.ssl.key-store-type=PKCS12
 #server.ssl.key-store=classpath:barao.pfx
 #server.ssl.key-store-password=alg160325
@@ -40,9 +40,9 @@ spring.mail.host=
 spring.mail.port=
 spring.mail.username=
 spring.mail.password=
-spring.mail.properties.mail.smtp.starttls.enable=
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.cache.type=redis
 spring.redis.host=localhost
 spring.redis.port=6379
-spring.cache.redis.time-to-live=60000
+spring.cache.redis.time-to-live=1h
