[ADD] initial RabbitMQ and push notifications config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,7 @@ logging.level.org.hibernate.SQL=ERROR
 logging.level.org.springframework.web=ERROR
 spring.resources.static-locations=file:videos/hls/
 
-server.url=http://localhost:8080
+server.url=http://192.168.100.12:8080
 
 
 server.port=8080
@@ -46,3 +46,9 @@ spring.cache.type=redis
 spring.redis.host=localhost
 spring.redis.port=6379
 spring.cache.redis.time-to-live=1h
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
