--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,11 @@
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>io.minio</groupId>
+			<artifactId>minio</artifactId>
+			<version>8.5.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
