--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,5 +52,9 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 
+minio.endpoint=https://192.168.100.10:9000
+minio.access-key=dev
+minio.secret-key=Ub3rl@nd1@
+minio.bucket.stream=openstreamify
