--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -54,7 +54,7 @@ spring.rabbitmq.password=guest
 
 #spring.jpa.show-sql=true
 
-minio.endpoint=https://192.168.100.10:9000
+minio.endpoint=http://192.168.100.10:9000
 minio.access-key=dev
 minio.secret-key=Ub3rl@nd1@
 minio.bucket.stream=openstreamify
