[ADD] Adding i18n supporting multiple languages

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,8 +29,8 @@ server.url=http://192.168.100.12:8080
 
 server.port=8080
 #server.ssl.key-store-type=PKCS12
-#server.ssl.key-store=classpath:barao.pfx
-#server.ssl.key-store-password=alg160325
+#server.ssl.key-store=classpath:teste.pfx
+#server.ssl.key-store-password=
 #server.ssl.key-alias=teste
 
 management.endpoints.web.exposure.include=*
@@ -54,7 +54,13 @@ spring.rabbitmq.password=guest
 
 #spring.jpa.show-sql=true
 
-minio.endpoint=http://192.168.100.10:9000
-minio.access-key=dev
-minio.secret-key=Ub3rl@nd1@
+minio.endpoint=http://192.168.100.12:9000
+minio.access-key=ROOTUSER
+minio.secret-key=CHANGEME123
 minio.bucket.stream=openstreamify
+
+spring.mvc.view.encoding=UTF-8
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
+spring.thymeleaf.encoding=UTF-8
