[FIX] Wrong amount of notifications when adding a new one fixed.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,8 +24,8 @@ logging.level.org.hibernate.SQL=ERROR
 logging.level.org.springframework.web=ERROR
 spring.resources.static-locations=file:videos/hls/
 
+#server.url=http://openstreamify.ddns.net:8080
 server.url=http://192.168.100.12:8080
-
 
 server.port=8080
 #server.ssl.key-store-type=PKCS12
