--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -59,3 +59,5 @@ minio.access-key=ROOTUSER
 minio.secret-key=CHANGEME123
 minio.bucket.stream=openstreamify
 
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_CHAT_ID=
