Add and modify files for movie genre and device token management
- Added .env file for environment configuration
- Updated Dockerfile and docker-compose.yml for service configuration
- Created alert template for Alertmanager
- Updated pom.xml for dependencies
- Introduced new DTOs: GenreDTO, MovieDTO
- Added DeviceTokenController and updated GenreController, MovieController
- Added new enum for DevicePlataform
- Modified MovieGenre enum
- Created models for DeviceToken, Genre, and updated Movie model
- Added repositories and services for DeviceToken and Genre management
- Updated MoviesService for new functionality
- Modified application.yml and config.js for app configuration
- Added MovieRestControllerTest for controller testing

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.ismael</groupId>
-	<artifactId>movie</artifactId>
+	<artifactId>openstreamify</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>movie</name>
 	<description>Projeto da atividade 1 senax</description>
