--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,11 @@
     <groupId>com.ismael</groupId>
     <artifactId>openstreamify</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>video</name>
-    <description>Projeto da atividade 1 senax</description>
+    <name>OpenStreamify</name>
+    <description>This web application, built with Spring Boot, is a powerful and feature-rich streaming platform for
+        managing and delivering movies and TV series. It offers secure JWT-based authentication, efficient request
+        handling with Spring MVC, and a robust access control system based on user roles and permissions.
+    </description>
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -73,7 +76,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
-        <!-- Dependência Maven para JavaCV -->
 
         <!--Prometheus dependencies-->
         <dependency>
